--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -9,7 +9,8 @@ name: Deploy to Firebase Hosting on merge
   workflow_dispatch:
 env:
   NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
-  DATABASE_ID: ${{ secrets.DATABASE_ID }}
+  BLOG_DATABASE_ID: ${{ secrets.DATABASE_ID }}
+  INDIE_DATABASE_ID: ${{ secrets.INDIE_DATABASE_ID }}
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
