--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,6 +11,7 @@ env:
   NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
   BLOG_DATABASE_ID: ${{ secrets.DATABASE_ID }}
   INDIE_DATABASE_ID: ${{ secrets.INDIE_DATABASE_ID }}
+  PUBLIC_STORAGE: ${{ secrets.PUBLIC_STORAGE }}
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
