--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -7,7 +7,7 @@ env:
   NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
   BLOG_DATABASE_ID: ${{ secrets.DATABASE_ID }}
   INDIE_DATABASE_ID: ${{ secrets.INDIE_DATABASE_ID }}
-  PUBLIC_STORAGE: ${{ secrets.PUBLIC_STORAGE }}
+  NEXT_PUBLIC_PUBLIC_STORAGE: ${{ secrets.PUBLIC_STORAGE }}
 jobs:
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
