--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -8,6 +8,7 @@ env:
   BLOG_DATABASE_ID: ${{ secrets.DATABASE_ID }}
   INDIE_DATABASE_ID: ${{ secrets.INDIE_DATABASE_ID }}
   NEXT_PUBLIC_PUBLIC_STORAGE: ${{ secrets.PUBLIC_STORAGE }}
+  NEXT_PUBLIC_PUBLIC_STORAGE: ${{ secrets.NEXT_PUBLIC_PUBLIC_STORAGE }}
 jobs:
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
