--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@next/eslint-plugin-next": "^13.1.3"
   }
 }
