--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,6 +14,7 @@ env:
   ANIME_DATABASE_ID: ${{ secrets.ANIME_DATABASE_ID }}
   NEXT_PUBLIC_PUBLIC_STORAGE: ${{ secrets.PUBLIC_STORAGE }}
   NEXT_PUBLIC_GITHUB_ACCOUNT: ${{ secrets.NEXT_PUBLIC_GITHUB_ACCOUNT }}
+  NEXT_PUBLIC_GA_ID: ${{ secrets.NEXT_PUBLIC_GA_ID }}
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
