--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,6 +15,7 @@ env:
   NEXT_PUBLIC_PUBLIC_STORAGE: ${{ secrets.PUBLIC_STORAGE }}
   NEXT_PUBLIC_GITHUB_ACCOUNT: ${{ secrets.NEXT_PUBLIC_GITHUB_ACCOUNT }}
   NEXT_PUBLIC_GA_ID: ${{ secrets.NEXT_PUBLIC_GA_ID }}
+  NEXT_PUBLIC_BASE_URL: ${{ secrets.NEXT_PUBLIC_BASE_URL }}
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
