--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "prettier": {
     "printWidth": 160,
@@ -35,6 +36,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "next-sitemap": "^4.2.3",
     "prettier": "^2.8.1",
     "prettier-plugin-organize-imports": "^3.2.1"
   }
