--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "contentful-management": "^11.14.0",
+    "contentful-typescript-codegen": "^3.4.0",
+    "dotenv": "^16.4.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,7 +39,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
     "next-sitemap": "^4.2.3",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.1"
   }
 }
