--- a/package.json
+++ b/package.json
@@ -4,40 +4,26 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next-sitemap && next export",
+    "build": "next build && next-sitemap",
     "start": "next start",
-    "lint": "next lint"
-  },
-  "prettier": {
-    "printWidth": 160,
-    "singleQuote": true,
-    "semi": false
+    "lint": "biome check",
+    "lint:fix": "biome check --fix",
+    "format": "biome format --write"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
     "dotenv": "^16.4.1",
-    "next": "^13.5.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
-  },
-  "resolutions": {
-    "@types/react": "17.0.40"
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.1.3",
+    "@biomejs/biome": "^2.3.11",
     "@notionhq/client": "^2.2.3",
     "@types/gtag.js": "^0.0.12",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "eslint": "^8.31.0",
-    "eslint-config-next": "13.1.1",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-prettier": "^4.2.1",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "next-sitemap": "^4.2.3",
-    "prettier": "^2.8.8",
-    "prettier-plugin-organize-imports": "^3.2.1"
+    "typescript": "^5"
   }
 }
